# emoticode

./: .gitignore  README.md  classification_report.csv  config.py  embed.py  emoticode_v2.ipynb  emoticode_v3.ipynb  generate_report.py  models.py  pyproject.toml  submission_v4.csv  submission_v5.csv  submission_v6.csv  train.py
code/: embed.py  generate_report.py  train.py
dataset/: competition_test.csv  competition_train.csv  competition_val.csv  sample_submission.csv
submissions/: sonar.csv
