[project]
name = "emoticode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "sonar-space>=0.5.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.3",
]
